# cinema_skylight_engine

./: .gitignore  Cargo.toml  README.md  design_doc.md  design_notes.md
src/: camera.rs  cs_engine.rs  game_object.rs  lib.rs  resource_manager.rs  window_utils.rs
src/debug/: gl_debug.rs  mod.rs
src/error/: errors.rs  mod.rs
src/gl_safe/: mod.rs
src/render_pipelines/: mod.rs  view_3d_render_pipeline.rs  widget_2d_render_pipeline.rs
src/scenes/: mod.rs  scene.rs  view_3d_scene.rs  widget_2d_scene.rs  widget_2d_scene_old.rs
src/threads/: input.rs  load.rs  main.rs  mod.rs  program_events.rs  ui.rs
src/widgets/: background.rs  background_widget.rs  border_widths.rs  mod.rs  texture_widget.rs  traits.rs  widget.rs  widget_model.rs  widget_old.rs  widget_quad.rs
src/widgets/composites/: framed_widget.rs  mod.rs  picture_widget.rs
src/widgets/primitives/: background_widget.rs  border_widget.rs  container_widget.rs  mod.rs  text_widget.rs  texture_widget.rs
test_proj/: Cargo.toml
test_proj/src/: main.rs
