[package]
name = "cinema_skylight_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.48.0"
silver_gl = {path = "../silver_gl"}
cgmath = "0.18.0"
rand = "0.8.5"
tobj = "3.2.3"
image = "0.24.3"
downcast-rs = "1.2.0"